<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/orange">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:textColor="@color/white"
        android:layout_above="@+id/LayoutDangNhap"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="30sp"

        ></TextView>
    <LinearLayout
        android:id="@+id/LayoutDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/username"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"></EditText>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/pass"
            android:padding="10dp"
            android:password="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:textSize="18sp"
                ></Button>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/pink"
                android:textSize="18sp"
                ></Button>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>